[#285] change label and fix height on mobiles

--- a/src/client/tracking/settings/change-auth.scss
+++ b/src/client/tracking/settings/change-auth.scss
@@ -4,10 +4,11 @@
 .content {
   display: flex;
   flex-direction: column;
+  height: 40em;
   margin-top: $margin-top;
 
   @include respond-to(tablet, desktop) {
-    height: 20em;
+    height: 21em;
   }
 }
 
